--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,5 @@
-.error {
+.error
+{
     width:200px;
     height:20px;
     height:auto;
@@ -16,4 +17,15 @@
     -webkit-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
     -moz-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
     box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+}
+
+.navbar-center
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    margin: auto;
+  height:100%;
 }
