--- a/css/app.css
+++ b/css/app.css
@@ -27,7 +27,7 @@
     top: 0;
     text-align: center;
     margin: auto;
-  height:100%;
+    height:100%;
 }
 
 .container-paries{
@@ -51,3 +51,22 @@
     margin: 0 auto;
     max-width: 100%;
 }
+
+
+#cd-cart {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100%;
+
+    /* header height */
+    padding-top: 50px;
+
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+
+    transition: right 0.3s;
+   }
+ #cd-cart .speed-in {
+     right: 0;
+ }
