--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,18 @@ img {
   width: 50px;
   margin-left: 10px;
 }
+
+.info {
+
+  color: white;
+  font-size: 12px;
+}
+
+.pari {
+
+  color: red;
+  font-weight: bold;
+}
 /* -------------------------------- 
 
 Modules - reusable parts of our design
@@ -65,6 +77,8 @@ Modules - reusable parts of our design
   white-space: nowrap;
 }
 
+
+
 /* -------------------------------- 
 
 xheader 
@@ -84,7 +98,7 @@ xheader
 
 .footer {
   position: fixed;
-  top: 80%;
+  top: 95%;
   left: 0;
   height: 50px;
   width: 100%;
@@ -259,11 +273,15 @@ xheader
   -webkit-transition: right 0.3s;
   -moz-transition: right 0.3s;
   transition: right 0.3s;
+  position: relative;
+  overflow:auto;
+    word-wrap:break-word;
 }
 #cd-cart.speed-in {
   position: absolute;
   top:35%;
   right: 0;
+
 }
 #cd-cart > * {
   padding: 0 1em;
@@ -461,3 +479,25 @@ xkeyframes
     opacity: 1;
   }
 }
+
+
+.cd-price {
+  margin-top: .4em;
+}
+
+.checkout-btn {
+  display: block;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background: #cf645e;
+  color: #FFF;
+  text-align: center;
+}
+
+.checkout-btn:hover {
+  background: #a2dda8;
+}
+
+
+
